博士验证功能ok

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>One</title>
+<title>首页-博士直通车</title>
 <link href="/stylesheets/bootstrap.min.css" rel="stylesheet" />
 <link href="/stylesheets/flexslider.css" rel="stylesheet" />
 <link href="/stylesheets/style1.css" rel="stylesheet" />
