--- a/views/topic/index.ejs
+++ b/views/topic/index.ejs
@@ -31,7 +31,7 @@
           <i class="iconfont icon-sousuo"></i>
           <input class="layui-input" autocomplete="off" placeholder="搜索内容，回车跳转" type="text" name="q">
         </form>
-        <a href="jie/add.html" class="layui-btn jie-add">发布问题</a>
+        <a href="topic/add" class="layui-btn jie-add">发布问题</a>
       </div>
 
 
