--- a/views/topic/detail.ejs
+++ b/views/topic/detail.ejs
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<title>{{= rows.title}} - {{lay.base.name}}</title>
+<title><% title %></title>
 <meta name="description" content="{{= d.description }}">
 
 <%- include("../link.ejs") %>
@@ -12,70 +12,63 @@
 
 <%- include("../header.ejs") %>
 
-{{# if(rows){
-  var myself = rows.uid === user.id;
-}}
 <div class="main layui-clear">
   <div class="wrap">
     <div class="content detail">
-      <h1>{{=rows.title}}</h1>
+      <h1><%= post[0].get('title') %></h1>
       <div class="fly-tip fly-detail-hint" data-id="{{rows.id}}">
 
-        {{ rows.stick > 0 ? '<span class="fly-tip-stick">置顶帖</span>' :'' }}
-        {{ rows.status == 1 ? '<span class="fly-tip-jing">精帖</span>' : ''}}
-        {{# if(rows.accept === -1){ }}
+
         <span>未结贴</span>
-        {{# } else if(rows.accept >= 0 ){ }}
-        <span class="fly-tip-jie">已采纳</span>
-        {{# } }}
 
-        {{# if(user.auth == 1){ }}
-        <span class="jie-admin" type="del" style="margin-left: 20px;">删除</span>
-        {{# } }}
+        <!-- <span class="fly-tip-jie">已采纳</span> -->
 
-        {{# if(user.auth == 1 || user.auth == 2){ }}
-          {{# if(rows.stick > 0){ }}
-            <span class="jie-admin" type="set" field="stick" rank="0" style="background-color:#ccc;">取消置顶</span>
-          {{# } else { }}
+
+
+        <!-- <span class="jie-admin" type="del" style="margin-left: 20px;">删除</span> -->
+
+
+
+            <!-- <span class="jie-admin" type="set" field="stick" rank="0" style="background-color:#ccc;">取消置顶</span>
+
             <span class="jie-admin" type="set" field="stick" rank="1">置顶</span>
-          {{# };
-          if(rows.status == 1){ }}
+
+
             <span class="jie-admin" type="set" field="status" rank="0" style="background-color:#ccc;">取消加精</span>
-          {{# } else { }}
-            <span class="jie-admin" type="set" field="status" rank="1">加精</span>
-          {{# };
-        } }}
+
+            <span class="jie-admin" type="set" field="status" rank="1">加精</span> -->
+
 
         <div class="fly-list-hint">
-          <i class="iconfont" title="回答">&#xe60c;</i> {{rows.comment}}
-          <i class="iconfont" title="人气">&#xe60b;</i> {{rows.hits}}
+          <i class="iconfont" title="回答">&#xe60c;</i> 1
+          <i class="iconfont" title="人气">&#xe60b;</i> 2
         </div>
       </div>
       <div class="detail-about">
         <a class="jie-user" href="/u/{{168*rows.uid}}/">
-          <img src="{{rows.user.avatar}}" alt="{{rows.user.username}}">
+          <img src=<%= post[0].get('questionerAvatar') %> alt="<%= post[0].get('questionerNickName') %>">
           <cite>
-            {{rows.user.username}}
-            {{# if(rows.user.rmb){ }}
-            <em style="padding:0 5px; color: #FF7200;">VIP{{ lay.util.vip(rows.user.rmb) }}</em>
-            {{# } }}
-            <em>发布于{{lay.time(rows.time, true)}}</em>
-            {{# }}
+            <%= post[0].get('questionerNickName') %>
+
+            <em style="padding:0 5px; color: #FF7200;">VIP</em>
+
+            <em>发布于</em>
+
           </cite>
         </a>
         <div class="detail-hits" data-id="{{rows.id}}">
 
-          <span style="color:#FF7200">悬赏：{{rows.experience}}飞吻</span>
+          <span style="color:#FF7200">悬赏：<%= post[0].get('reward') %>博士点</span>
 
-          {{# if((user.username && myself && rows.accept == -1) || user.auth == 1){ }}
-          <span class="jie-admin" type="edit"><a href="/jie/edit/{{rows.id}}">编辑此贴</a></span>
-          {{# } }}
+
+          <!-- <span class="jie-admin" type="edit"><a href="/jie/edit/{{rows.id}}">编辑此贴</a></span> -->
+
 
         </div>
       </div>
 
       <div class="detail-body photos" style="margin-bottom: 20px;">
-        {{ d.content(rows.content) }}
+        <%= post[0].get('content') %>
 
         <!-- layer-728*90 -->
         <div  class="fly-ad" style="margin-top: 30px; height:90px; overflow: hidden;">
@@ -87,26 +80,24 @@
         </div>
       </div>
 
-      {{# var jieda = rows.jieda; }}
+
 
       <a name="comment"></a>
-      <h2 class="page-title">热忱回答<span>{{rows.comment > 0 ? ('（<em id="jiedaCount">'+rows.comment+'</em>）') : ''}}</span></h2>
+      <h2 class="page-title">热忱回答<span><em id="jiedaCount">2</em></span></h2>
 
       <ul class="jieda photos" id="jieda">
-      {{# jieda.forEach(function(item, index){
-        var myda = item.user.username === user.username;
-      }}
-        <li data-id="{{item.id}}" {{item.id == rows.accept ? 'class="jieda-daan"' : '' }}>
+
+        <li data-id="{{item.id}}" class="jieda-daan">
           <a name="item-{{item.time}}"></a>
           <div class="detail-about detail-about-reply">
-            <a class="jie-user" href="/u/{{168*item.user.id}}/">
-              <img src="{{item.user.avatar}}" alt="{{item.user.username}}">
+            <a class="jie-user" href="/u/">
+              <img src="#" alt="">
               <cite>
-                <i>{{item.user.username}}</i>
-                {{# if(item.user.rmb) { }}
-                <em style="padding:0 ; color: #FF7200;">VIP{{ lay.util.vip(item.user.rmb) }}</em>
-                {{# } }}
-                {{# if(item.user.username === rows.username){ }}
+                <i>博士</i>
+
+                <em style="padding:0 ; color: #FF7200;">VIP</em>
+
+                <!-- {{# if(item.user.username === rows.username){ }}
                 <em>(楼主)</em>
                 {{# } else if(item.user.auth == 1) { }}
                 <em style="color:#5FB878">(管理员)</em>
@@ -114,18 +105,18 @@
                 <em style="color:#FF9E3F">（活雷锋）</em>
                 {{# } else if(item.user.auth == -1) { }}
                 <em style="color:#999">（该号已被封）</em>
-                {{# } }}
+                {{# } }} -->
               </cite>
             </a>
             <div class="detail-hits">
-              <span>{{lay.time(item.time)}}</span>
+              <span>一天前</span>
             </div>
-            {{# if(item.id == rows.accept){ }}
+
             <i class="iconfont icon-caina" title="最佳答案"></i>
-            {{# } }}
+
           </div>
           <div class="detail-body jieda-body">
-            {{ d.content(item.content) }}
+            1234
           </div>
           <div class="jieda-reply">
           <span class="jieda-zan {{d.session['zan'+item.id] ? 'zanok' : ''}}" type="zan">
@@ -159,9 +150,9 @@
           {{# } }}
           </div>
         </li>
-      {{# }); if(jieda.length === 0){ }}
+      <!-- {{# }); if(jieda.length === 0){ }}
         <li class="fly-none">没有任何回答</li>
-      {{# } }}
+      {{# } }} -->
       </ul>
 
       {{ d.laypage }}
