--- a/views/topic/index.ejs
+++ b/views/topic/index.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -41,7 +40,7 @@
             <img src="http://tp4.sinaimg.cn/1345566427/180/5730976522/0" alt="">
           </a>
           <h2 class="fly-tip">
-            <a href="jie/detail.html">基于Layui的轻量级问答社区页面模版</a>
+            <a href="topic/detail">基于Layui的轻量级问答社区页面模版</a>
             <span class="fly-tip-stick">置顶</span>
             <span class="fly-tip-jing">精帖</span>
           </h2>
@@ -91,244 +90,25 @@
             </span>
           </p>
         </li>
+        <% posts.forEach(function(post){ %>
         <li class="fly-list-li">
-          <a href="user/home.html" class="fly-list-avatar">
-            <img src="../res/images/avatar/default.png" alt="">
+          <a href="users/home?uid=<%= post.get('questionerId') %>" class="fly-list-avatar">
+            <img src=<%= post.get('questionerAvatar') %> alt="">
           </a>
           <h2 class="fly-tip">
-            <a href="jie/detail.html">关于layui 引用其他插件，扩展模块 的用法</a>
+            <a href="topic/detail?qId=<%= post.get('objectId') %>"><%= post.get('title') %></a>
           </h2>
           <p>
-            <span><a href="user/home.html">用户昵称</a></span>
+            <span><a href="user/home.html"><%= post.get('questionerNickName') %></a></span>
             <span>1小时前</span>
-            <span>layui框架综合</span>
+            <span><%= post.get('topicClass') %></span>
             <span class="fly-list-hint">
-              <i class="iconfont" title="回答">&#xe60c;</i> 8
-              <i class="iconfont" title="人气">&#xe60b;</i> 106
+              <i class="iconfont" title="回答">&#xe60c;</i> <%= post.get('consultations') %>
+              <i class="iconfont" title="人气">&#xe60b;</i> <%= post.get('visits') %>
             </span>
           </p>
         </li>
-        <li class="fly-list-li">
-          <a href="user/home.html" class="fly-list-avatar">
-            <img src="../res/images/avatar/default.png" alt="">
-          </a>
-          <h2 class="fly-tip">
-            <a href="jie/detail.html">关于layui 引用其他插件，扩展模块 的用法</a>
-          </h2>
-          <p>
-            <span><a href="user/home.html">用户昵称</a></span>
-            <span>1小时前</span>
-            <span>layui框架综合</span>
-            <span class="fly-list-hint">
-              <i class="iconfont" title="回答">&#xe60c;</i> 8
-              <i class="iconfont" title="人气">&#xe60b;</i> 106
-            </span>
-          </p>
-        </li>
-        <li class="fly-list-li">
-          <a href="user/home.html" class="fly-list-avatar">
-            <img src="../res/images/avatar/default.png" alt="">
-          </a>
-          <h2 class="fly-tip">
-            <a href="jie/detail.html">关于layui 引用其他插件，扩展模块 的用法</a>
-          </h2>
-          <p>
-            <span><a href="user/home.html">用户昵称</a></span>
-            <span>1小时前</span>
-            <span>layui框架综合</span>
-            <span class="fly-list-hint">
-              <i class="iconfont" title="回答">&#xe60c;</i> 8
-              <i class="iconfont" title="人气">&#xe60b;</i> 106
-            </span>
-          </p>
-        </li>
-        <li class="fly-list-li">
-          <a href="user/home.html" class="fly-list-avatar">
-            <img src="../res/images/avatar/default.png" alt="">
-          </a>
-          <h2 class="fly-tip">
-            <a href="jie/detail.html">关于layui 引用其他插件，扩展模块 的用法</a>
-          </h2>
-          <p>
-            <span><a href="user/home.html">用户昵称</a></span>
-            <span>1小时前</span>
-            <span>layui框架综合</span>
-            <span class="fly-list-hint">
-              <i class="iconfont" title="回答">&#xe60c;</i> 8
-              <i class="iconfont" title="人气">&#xe60b;</i> 106
-            </span>
-          </p>
-        </li>
-        <li class="fly-list-li">
-          <a href="user/home.html" class="fly-list-avatar">
-            <img src="../res/images/avatar/default.png" alt="">
-          </a>
-          <h2 class="fly-tip">
-            <a href="jie/detail.html">关于layui 引用其他插件，扩展模块 的用法</a>
-          </h2>
-          <p>
-            <span><a href="user/home.html">用户昵称</a></span>
-            <span>1小时前</span>
-            <span>layui框架综合</span>
-            <span class="fly-list-hint">
-              <i class="iconfont" title="回答">&#xe60c;</i> 8
-              <i class="iconfont" title="人气">&#xe60b;</i> 106
-            </span>
-          </p>
-        </li>
-        <li class="fly-list-li">
-          <a href="user/home.html" class="fly-list-avatar">
-            <img src="../res/images/avatar/default.png" alt="">
-          </a>
-          <h2 class="fly-tip">
-            <a href="jie/detail.html">关于layui 引用其他插件，扩展模块 的用法</a>
-          </h2>
-          <p>
-            <span><a href="user/home.html">用户昵称</a></span>
-            <span>1小时前</span>
-            <span>layui框架综合</span>
-            <span class="fly-list-hint">
-              <i class="iconfont" title="回答">&#xe60c;</i> 8
-              <i class="iconfont" title="人气">&#xe60b;</i> 106
-            </span>
-          </p>
-        </li>
-        <li class="fly-list-li">
-          <a href="user/home.html" class="fly-list-avatar">
-            <img src="../res/images/avatar/default.png" alt="">
-          </a>
-          <h2 class="fly-tip">
-            <a href="jie/detail.html">关于layui 引用其他插件，扩展模块 的用法</a>
-          </h2>
-          <p>
-            <span><a href="user/home.html">用户昵称</a></span>
-            <span>1小时前</span>
-            <span>layui框架综合</span>
-            <span class="fly-list-hint">
-              <i class="iconfont" title="回答">&#xe60c;</i> 8
-              <i class="iconfont" title="人气">&#xe60b;</i> 106
-            </span>
-          </p>
-        </li>
-        <li class="fly-list-li">
-          <a href="user/home.html" class="fly-list-avatar">
-            <img src="../res/images/avatar/default.png" alt="">
-          </a>
-          <h2 class="fly-tip">
-            <a href="jie/detail.html">关于layui 引用其他插件，扩展模块 的用法</a>
-          </h2>
-          <p>
-            <span><a href="user/home.html">用户昵称</a></span>
-            <span>1小时前</span>
-            <span>layui框架综合</span>
-            <span class="fly-list-hint">
-              <i class="iconfont" title="回答">&#xe60c;</i> 8
-              <i class="iconfont" title="人气">&#xe60b;</i> 106
-            </span>
-          </p>
-        </li>
-        <li class="fly-list-li">
-          <a href="user/home.html" class="fly-list-avatar">
-            <img src="../res/images/avatar/default.png" alt="">
-          </a>
-          <h2 class="fly-tip">
-            <a href="jie/detail.html">关于layui 引用其他插件，扩展模块 的用法</a>
-          </h2>
-          <p>
-            <span><a href="user/home.html">用户昵称</a></span>
-            <span>1小时前</span>
-            <span>layui框架综合</span>
-            <span class="fly-list-hint">
-              <i class="iconfont" title="回答">&#xe60c;</i> 8
-              <i class="iconfont" title="人气">&#xe60b;</i> 106
-            </span>
-          </p>
-        </li>
-        <li class="fly-list-li">
-          <a href="user/home.html" class="fly-list-avatar">
-            <img src="../res/images/avatar/default.png" alt="">
-          </a>
-          <h2 class="fly-tip">
-            <a href="jie/detail.html">关于layui 引用其他插件，扩展模块 的用法</a>
-          </h2>
-          <p>
-            <span><a href="user/home.html">用户昵称</a></span>
-            <span>1小时前</span>
-            <span>layui框架综合</span>
-            <span class="fly-list-hint">
-              <i class="iconfont" title="回答">&#xe60c;</i> 8
-              <i class="iconfont" title="人气">&#xe60b;</i> 106
-            </span>
-          </p>
-        </li>
-        <li class="fly-list-li">
-          <a href="user/home.html" class="fly-list-avatar">
-            <img src="../res/images/avatar/default.png" alt="">
-          </a>
-          <h2 class="fly-tip">
-            <a href="jie/detail.html">关于layui 引用其他插件，扩展模块 的用法</a>
-          </h2>
-          <p>
-            <span><a href="user/home.html">用户昵称</a></span>
-            <span>1小时前</span>
-            <span>layui框架综合</span>
-            <span class="fly-list-hint">
-              <i class="iconfont" title="回答">&#xe60c;</i> 8
-              <i class="iconfont" title="人气">&#xe60b;</i> 106
-            </span>
-          </p>
-        </li>
-        <li class="fly-list-li">
-          <a href="user/home.html" class="fly-list-avatar">
-            <img src="../res/images/avatar/default.png" alt="">
-          </a>
-          <h2 class="fly-tip">
-            <a href="jie/detail.html">关于layui 引用其他插件，扩展模块 的用法</a>
-          </h2>
-          <p>
-            <span><a href="user/home.html">用户昵称</a></span>
-            <span>1小时前</span>
-            <span>layui框架综合</span>
-            <span class="fly-list-hint">
-              <i class="iconfont" title="回答">&#xe60c;</i> 8
-              <i class="iconfont" title="人气">&#xe60b;</i> 106
-            </span>
-          </p>
-        </li>
-        <li class="fly-list-li">
-          <a href="user/home.html" class="fly-list-avatar">
-            <img src="../res/images/avatar/default.png" alt="">
-          </a>
-          <h2 class="fly-tip">
-            <a href="jie/detail.html">关于layui 引用其他插件，扩展模块 的用法</a>
-          </h2>
-          <p>
-            <span><a href="user/home.html">用户昵称</a></span>
-            <span>1小时前</span>
-            <span>layui框架综合</span>
-            <span class="fly-list-hint">
-              <i class="iconfont" title="回答">&#xe60c;</i> 8
-              <i class="iconfont" title="人气">&#xe60b;</i> 106
-            </span>
-          </p>
-        </li>
-        <li class="fly-list-li">
-          <a href="user/home.html" class="fly-list-avatar">
-            <img src="../res/images/avatar/default.png" alt="">
-          </a>
-          <h2 class="fly-tip">
-            <a href="jie/detail.html">关于layui 引用其他插件，扩展模块 的用法</a>
-          </h2>
-          <p>
-            <span><a href="user/home.html">用户昵称</a></span>
-            <span>1小时前</span>
-            <span>layui框架综合</span>
-            <span class="fly-list-hint">
-              <i class="iconfont" title="回答">&#xe60c;</i> 8
-              <i class="iconfont" title="人气">&#xe60b;</i> 106
-            </span>
-          </p>
-        </li>
+        <% }) %>
       </ul>
 
       <div style="text-align: center">
@@ -355,56 +135,6 @@
           <cite>纸飞机</cite>
           <i>159次回答</i>
         </a>
-        <a href="user/home.html">
-          <img src="../res/images/avatar/default.png">
-          <cite>纸飞机</cite>
-          <i>159次回答</i>
-        </a>
-        <a href="user/home.html">
-          <img src="../res/images/avatar/default.png">
-          <cite>纸飞机</cite>
-          <i>159次回答</i>
-        </a>
-        <a href="user/home.html">
-          <img src="../res/images/avatar/default.png">
-          <cite>纸飞机</cite>
-          <i>159次回答</i>
-        </a>
-        <a href="user/home.html">
-          <img src="../res/images/avatar/default.png">
-          <cite>纸飞机</cite>
-          <i>159次回答</i>
-        </a>
-        <a href="user/home.html">
-          <img src="../res/images/avatar/default.png">
-          <cite>纸飞机</cite>
-          <i>159次回答</i>
-        </a>
-        <a href="user/home.html">
-          <img src="../res/images/avatar/default.png">
-          <cite>纸飞机</cite>
-          <i>159次回答</i>
-        </a>
-        <a href="user/home.html">
-          <img src="../res/images/avatar/default.png">
-          <cite>纸飞机</cite>
-          <i>159次回答</i>
-        </a>
-        <a href="user/home.html">
-          <img src="../res/images/avatar/default.png">
-          <cite>纸飞机</cite>
-          <i>159次回答</i>
-        </a>
-        <a href="user/home.html">
-          <img src="../res/images/avatar/default.png">
-          <cite>纸飞机</cite>
-          <i>159次回答</i>
-        </a>
-        <a href="user/home.html">
-          <img src="../res/images/avatar/default.png">
-          <cite>纸飞机</cite>
-          <i>159次回答</i>
-        </a>
       </span>
     </div>
 
@@ -418,30 +148,6 @@
         <a href="jie/detail.html">Java实现LayIM后端的核心代码</a>
         <span><i class="iconfont">&#xe60b;</i> 767</span>
       </li>
-      <li>
-        <a href="jie/detail.html">Layui 官网 在线演示页面 全面增加 查看代码 功能</a>
-        <span><i class="iconfont">&#xe60b;</i> 767</span>
-      </li>
-      <li>
-        <a href="jie/detail.html">Layui 官网 在线演示页面 全面增加 查看代码 功能</a>
-        <span><i class="iconfont">&#xe60b;</i> 767</span>
-      </li>
-      <li>
-        <a href="jie/detail.html">Layui 官网 在线演示页面 全面增加 查看代码 功能</a>
-        <span><i class="iconfont">&#xe60b;</i> 767</span>
-      </li>
-      <li>
-        <a href="jie/detail.html">Layui 官网 在线演示页面 全面增加 查看代码 功能</a>
-        <span><i class="iconfont">&#xe60b;</i> 767</span>
-      </li>
-      <li>
-        <a href="jie/detail.html">Layui 官网 在线演示页面 全面增加 查看代码 功能</a>
-        <span><i class="iconfont">&#xe60b;</i> 767</span>
-      </li>
-      <li>
-        <a href="jie/detail.html">Layui 官网 在线演示页面 全面增加 查看代码 功能</a>
-        <span><i class="iconfont">&#xe60b;</i> 767</span>
-      </li>
     </ol>
 
     <h3 class="page-title">近期热议</h3>
@@ -450,42 +156,14 @@
         <a href="jie/detail.html">盛赞！大赞狂赞！Layui完美兼容Vue.js</a>
         <span><i class="iconfont">&#xe60c;</i> 96</span>
       </li>
-      <li>
-        <a href="jie/detail.html">盛赞！大赞狂赞！Layui完美兼容Vue.js</a>
-        <span><i class="iconfont">&#xe60c;</i> 96</span>
-      </li>
-      <li>
-        <a href="jie/detail.html">盛赞！大赞狂赞！Layui完美兼容Vue.js</a>
-        <span><i class="iconfont">&#xe60c;</i> 96</span>
-      </li>
-      <li>
-        <a href="jie/detail.html">盛赞！大赞狂赞！Layui完美兼容Vue.js</a>
-        <span><i class="iconfont">&#xe60c;</i> 96</span>
-      </li>
-      <li>
-        <a href="jie/detail.html">盛赞！大赞狂赞！Layui完美兼容Vue.js</a>
-        <span><i class="iconfont">&#xe60c;</i> 96</span>
-      </li>
-      <li>
-        <a href="jie/detail.html">盛赞！大赞狂赞！Layui完美兼容Vue.js</a>
-        <span><i class="iconfont">&#xe60c;</i> 96</span>
-      </li>
-      <li>
-        <a href="jie/detail.html">Java实现LayIM后端的核心代码</a>
-        <span><i class="iconfont">&#xe60c;</i> 96</span>
-      </li>
-      <li>
-        <a href="jie/detail.html">Java实现LayIM后端的核心代码</a>
-        <span><i class="iconfont">&#xe60c;</i> 96</span>
-      </li>
     </ol>
 
-    <div class="fly-link">
+    <!-- <div class="fly-link">
       <span>友情链接：</span>
       <a href="http://www.layui.com/" target="_blank">Layui</a>
       <a href="http://layim.layui.com/" target="_blank">LayIM</a>
       <a href="http://layer.layui.com/" target="_blank">layer</a>
-    </div>
+    </div> -->
 
 
   </div>
