--- a/views/topic/index.ejs
+++ b/views/topic/index.ejs
@@ -10,6 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <title><%= title %></title>
 <%- include("../link.ejs") %>
+<script  src="/javascripts/time_conversion.js"></script>
 </head>
 <body>
 
@@ -35,61 +36,6 @@
 
 
       <ul class="fly-list">
-        <li class="fly-list-li">
-          <a href="user/home.html" class="fly-list-avatar">
-            <img src="http://tp4.sinaimg.cn/1345566427/180/5730976522/0" alt="">
-          </a>
-          <h2 class="fly-tip">
-            <a href="topic/detail">基于Layui的轻量级问答社区页面模版</a>
-            <span class="fly-tip-stick">置顶</span>
-            <span class="fly-tip-jing">精帖</span>
-          </h2>
-          <p>
-            <span><a href="user/home.html">贤心</a></span>
-            <span>刚刚</span>
-            <span>layui框架综合</span>
-            <span class="fly-list-hint">
-              <i class="iconfont" title="回答">&#xe60c;</i> 317
-              <i class="iconfont" title="人气">&#xe60b;</i> 6830
-            </span>
-          </p>
-        </li>
-        <li class="fly-list-li">
-          <a href="user/home.html" class="fly-list-avatar">
-            <img src="../res/images/avatar/00.jpg" alt="">
-          </a>
-          <h2 class="fly-tip">
-            <a href="jie/detail.html"> Layui 首个版本千呼万唤，终于滚出来了 </a>
-            <span class="fly-tip-stick">置顶</span>
-          </h2>
-          <p>
-            <span><a href="user/home.html">纸飞机</a></span>
-            <span>30分钟前</span>
-            <span>技术闲谈</span>
-            <span class="fly-list-hint">
-              <i class="iconfont" title="回答">&#xe60c;</i> 502
-              <i class="iconfont" title="人气">&#xe60b;</i> 81689
-            </span>
-          </p>
-        </li>
-
-        <li class="fly-list-li">
-          <a href="user/home.html" class="fly-list-avatar">
-            <img src="../res/images/avatar/default.png" alt="">
-          </a>
-          <h2 class="fly-tip">
-            <a href="jie/detail.html">关于layui 引用其他插件，扩展模块 的用法</a>
-          </h2>
-          <p>
-            <span><a href="user/home.html">用户昵称</a></span>
-            <span>1小时前</span>
-            <span>layui框架综合</span>
-            <span class="fly-list-hint">
-              <i class="iconfont" title="回答">&#xe60c;</i> 8
-              <i class="iconfont" title="人气">&#xe60b;</i> 106
-            </span>
-          </p>
-        </li>
         <% posts.forEach(function(post){ %>
         <li class="fly-list-li">
           <a href="users/home?uid=<%= post.get('questionerId') %>" class="fly-list-avatar">
@@ -97,10 +43,18 @@
           </a>
           <h2 class="fly-tip">
             <a href="topic/detail?qId=<%= post.get('objectId') %>"><%= post.get('title') %></a>
+            <% if( post.get('recommend')==1 ){ %>
+            <span class="fly-tip-stick">置顶</span>
+            <% } if( post.get('status')==1 ){ %>
+            <span class="fly-tip-jing">精帖</span>
+            <% } %>
           </h2>
           <p>
             <span><a href="user/home.html"><%= post.get('questionerNickName') %></a></span>
-            <span>1小时前</span>
+            <script>
+              var time = getDateDiff(<%= post.get('createdAt').getTime() %>);
+              document.write("<span>" + time + "</span>");  // 输出语句
+            </script>
             <span><%= post.get('topicClass') %></span>
             <span class="fly-list-hint">
               <i class="iconfont" title="回答">&#xe60c;</i> <%= post.get('consultations') %>
@@ -130,11 +84,6 @@
           <cite>纸飞机</cite>
           <i>159次回答</i>
         </a>
-        <a href="user/home.html">
-          <img src="../res/images/avatar/default.png">
-          <cite>纸飞机</cite>
-          <i>159次回答</i>
-        </a>
       </span>
     </div>
 
@@ -143,10 +92,6 @@
       <li>
         <a href="jie/detail.html">Layui 官网 在线演示页面 全面增加 查看代码 功能</a>
         <span><i class="iconfont">&#xe60b;</i> 6087</span>
-      </li>
-      <li>
-        <a href="jie/detail.html">Java实现LayIM后端的核心代码</a>
-        <span><i class="iconfont">&#xe60b;</i> 767</span>
       </li>
     </ol>
 
