--- a/views/topic/detail.ejs
+++ b/views/topic/detail.ejs
@@ -169,24 +169,23 @@
 
     <h3 class="page-title">最近热帖</h3>
     <ol class="fly-list-one">
-    {{# d.hot.forEach(function(item){ }}
+      <% visits.forEach(function(visit){ %>
       <li>
-        <a href="/jie/{{item.id}}.html">{{= item.title }}</a>
-        <span><i class="iconfont">&#xe60b;</i> {{item.hits}}</span>
+        <a href="jie/detail.html"><%= visit.get('title') %></a>
+        <span><i class="iconfont">&#xe60b;</i> <%= visit.get('visits') %></span>
       </li>
-    {{# }); }}
+      <% }); %>
     </ol>
 
-    {{ include ../ad/edge }}
 
     <h3 class="page-title">近期热议</h3>
     <ol class="fly-list-one">
-    {{# d.hotda.forEach(function(item){ }}
+      <% recommend.forEach(function(recom){ %>
       <li>
-        <a href="/jie/{{item.id}}.html">{{= item.title }}</a>
-        <span><i class="iconfont">&#xe60c;</i> {{item.comment}}</span>
+        <a href="jie/detail.html"><%= recom.get('title') %></a>
+        <span><i class="iconfont">&#xe60c;</i> <%= recom.get('recommend') %></span>
       </li>
-    {{# }); }}
+      <% }); %>
     </ol>
 
   </div>
