--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,13 +14,13 @@
 </head>
 <body>
 <div class="header">
-  <div class="container"> <a class="navbar-brand" href="index.html"> 博士直通车 </a>
+  <div class="container"> <a class="navbar-brand" href="/"> 博士直通车 </a>
     <div class="menu"> <a class="toggleMenu" href="#"><img src="images/nav_icon.png" alt="" /> </a>
       <ul class="nav" id="nav">
-        <li class="current"><a href="index.html">关于我们</a></li>
-        <li><a href="about.html">联系我们</a></li>
-        <li><a href="services.html">登录</a></li>
-        <li><a href="contact.html">注册</a></li>
+        <li><a href="/about">关于我们</a></li>
+        <li><a href="/contact">联系我们</a></li>
+        <li><a href="users/login">登录</a></li>
+        <li><a href="users/reg">注册</a></li>
         <div class="clear"></div>
       </ul>
       <script type="text/javascript" src="js/responsive-nav.js"></script>
@@ -55,7 +55,7 @@
 <div class="footer">
   <div class="footer_bottom">
     <div class="copy">
-      <p>Copyright &copy; 2015 Company Name. More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">博士直通车</a> </p>
+      <p>Copyright &copy; 2015 Company Name. More Templates <a href="/" target="_blank" title="模板之家">博士直通车</a> </p>
     </div>
   </div>
 </div>
